# p6

./: .gitignore  README.md  auto.sh  benchmark.py  calculateRuns.cpp  default.nix  docker.nix  experiment_results.txt  flake.nix  kernel.cu
TAPN/: CMakeLists.txt  REAME.md  flake.nix  shell.nix
TAPN/observer/: Observer.cu  Observer.h
TAPN/parser/: parser.cu  parser.h
TAPN/petri/: Arcs.cu  Arcs.h  Invariant.cu  Invariant.h  Net.cu  Net.h  Place.cu  Place.h  Transition.cu  Transition.h  arcs.h  euler.cu  euler.h  fireflies.cu  main.cu  main.h  woodCuttingObservation.cu  woodCuttingObservation.h
UI/: flake.nix
UI/cudaqt/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui
auto/: auto.sh  experiment_results.csv  full_out
auto/fireflies/: fireflies.xml
auto/fireflies/euler/: euler.xml
auto/fireflies/euler/queries/: fireflies-queries-0.xml
auto/fireflies/queries/: create_euler.py  create_firefly.py  fireflies-queries-0.xml  fireflies-queries-1.xml  fireflies-queries-10.xml  fireflies-queries-11.xml  fireflies-queries-12.xml  fireflies-queries-13.xml  fireflies-queries-14.xml  fireflies-queries-15.xml  fireflies-queries-16.xml  fireflies-queries-17.xml  fireflies-queries-18.xml  fireflies-queries-19.xml  fireflies-queries-2.xml  fireflies-queries-20.xml  fireflies-queries-21.xml  fireflies-queries-22.xml  fireflies-queries-23.xml  fireflies-queries-24.xml  fireflies-queries-25.xml  fireflies-queries-26.xml  fireflies-queries-27.xml  fireflies-queries-28.xml  fireflies-queries-29.xml  fireflies-queries-3.xml  fireflies-queries-30.xml  fireflies-queries-31.xml  fireflies-queries-32.xml  fireflies-queries-33.xml  fireflies-queries-34.xml  fireflies-queries-35.xml  fireflies-queries-36.xml  fireflies-queries-37.xml  fireflies-queries-38.xml  fireflies-queries-39.xml  fireflies-queries-4.xml  fireflies-queries-5.xml  fireflies-queries-6.xml  fireflies-queries-7.xml  (+2 more)
cuda/: SPN.cu
hardcodespn/: euler.cu  fireflies.cu  stuff
manta/: euler.cu  kernel.cpp  kernel.cu  kernel2.cu
old/UI/cudaqt/: .gitignore  mainwindow.h  mainwindow.ui
old/cuda/: SPN.cu
old/hardcodespn/: euler.cu
tapnParser/: CMakeLists.txt  euler-number.tapn  result
tapnParser/include/: arc.h  petri_net.h  pnml_parser.h
tapnParser/src/: arc.cpp  main.cpp  petri_net.cpp  pnml_parser.cpp
